mobile/themes/core/honeycomb/platform.css
/* ... */
richlistitem
:
hover
:
active
:
not
(
[
selected
=
"
true
"
]
)
:
not
(
[
nohighlight
=
"
true
"
]
)
richlistitem
:
hover
:
active
:
not
(
[
selected
=
"
true
"
]
)
:
not
(
[
nohighlight
=
"
true
"
]
)
label
.
normal
richlistitem
:
hover
:
active
:
not
(
[
selected
=
"
true
"
]
)
:
not
(
[
nohighlight
=
"
true
"
]
)
description
.
normal
{
background
-
color
:
color_background_highlight
;
color
:
color_text_highlight
;
}
richlistitem
.
section
-
header
richlistitem
[
selected
=
"
true
"
]
.
section
-
header
{
font
-
weight
:
bold
;
color
:
color_text_header
;
background
-
color
:
color_background_header
;
}
richlistitem
.
show
-
on
-
select
{
visibility
:
collapse
;
}
richlistitem
[
selected
=
"
true
"
]
.
show
-
on
-
select
{
visibility
:
visible
;
}
richlistitem
.
hide
-
on
-
select
{
visibility
:
visible
;
}
richlistitem
[
selected
=
"
true
"
]
.
hide
-
on
-
select
{
visibility
:
collapse
;
}
richlistitem
[
typeName
=
"
message
"
]
{
border
-
bottom
:
0
;
}
/
*
colorpicker
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
colorpicker
>
panel
{
background
-
color
:
#
767973
;
}
colorpicker
>
vbox
{
background
-
color
:
#
767973
;
}
/
*
textbox
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
.
textbox
-
search
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
search
-
glass
-
30
.
png
"
)
;
-
moz
-
image
-
region
:
auto
;
}
.
textbox
-
search
-
clear
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
search
-
clear
-
30
.
png
"
)
;
-
moz
-
image
-
region
:
auto
;
}
/
*
menulist
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
.
menulist
-
label
{
font
-
family
:
"
Nokia
Sans
"
Tahoma
sans
-
serif
!
important
;
font
-
weight
:
normal
;
font
-
size
:
font_snormal
!
important
;
background
-
color
:
transparent
!
important
;
}
menulist
{
-
moz
-
appearance
:
none
!
important
;
-
moz
-
user
-
focus
:
ignore
;
min
-
width
:
touch_button_minwidth
!
important
;
min
-
height
:
touch_button_small
!
important
;
/
*
button
size
*
/
color
:
color_text_button
!
important
;
margin
:
margin_normal
;
padding
:
padding_small
padding_xnormal
;
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
button
-
bg
.
png
"
)
;
background
-
size
:
auto
100
%
;
border
:
border_width_tiny
solid
color_button_border
;
}
menulist
[
disabled
=
"
true
"
]
{
color
:
color_text_disabled
!
important
;
border
:
border_width_tiny
solid
color_button_border
!
important
;
}
menulist
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
:
active
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
toggle
-
off
.
png
"
)
;
}
menulist
>
dropmarker
{
height
:
32px
;
width
:
32px
;
margin
-
left
:
margin_snormal
;
background
-
color
:
transparent
;
/
*
for
windows
*
/
border
:
none
;
/
*
for
windows
*
/
-
moz
-
box
-
align
:
center
;
-
moz
-
box
-
pack
:
center
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
dropmarker
-
hdpi
.
png
"
)
;
-
moz
-
image
-
region
:
auto
;
display
:
block
;
}
menulist
[
disabled
=
"
true
"
]
>
dropmarker
{
opacity
:
0
.
5
;
}
/
*
progressmeter
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
progressmeter
{
background
-
color
:
#
fff
;
padding
:
padding_small
;
height
:
textbox_height
;
border
:
border_width_large
solid
#
aaa
;
-
moz
-
border
-
top
-
colors
:
-
moz
-
initial
;
-
moz
-
border
-
right
-
colors
:
-
moz
-
initial
;
-
moz
-
border
-
bottom
-
colors
:
-
moz
-
initial
;
-
moz
-
border
-
left
-
colors
:
-
moz
-
initial
;
}
.
progress
-
bar
{
background
-
color
:
color_background_highlight
;
}
/
*
panels
/
arrowboxes
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
arrowbox
{
-
moz
-
appearance
:
none
;
background
:
transparent
!
important
;
border
:
none
;
}
.
arrowbox
-
dark
.
panel
-
arrowcontent
{
padding
:
padding_normal
;
/
*
core
spacing
*
/
}
dialog
.
arrowbox
-
dark
.
panel
-
arrowcontent
.
panel
-
dark
{
color
:
color_text_default
;
background
:
color_background_default
;
}
dialog
.
arrowbox
-
dark
.
panel
-
arrowcontent
{
border
:
border_width_small
solid
color_dialog_border
;
}
dialog
{
margin
:
margin_xxxnormal
!
important
;
max
-
width
:
dialog_width
;
}
.
prompt
-
message
{
-
moz
-
box
-
pack
:
center
;
font
-
size
:
font_snormal
;
margin
:
padding_normal
;
}
.
prompt
-
title
{
font
-
size
:
font_xnormal
;
padding
-
top
:
padding_xnormal
;
padding
-
left
:
padding_normal
;
}
/
*
Authentication
dialogs
do
not
have
a
title
*
/
.
prompt
-
title
:
empty
.
prompt
-
title
:
empty
+
.
prompt
-
line
{
display
:
none
;
}
.
prompt
-
line
{
border
-
bottom
:
border_width_tiny
solid
color_divider_border
;
margin
:
margin_small
0
0
0
;
height
:
padding_normal
!
important
;
}
.
prompt
-
buttons
{
font
-
size
:
font_snormal
;
background
-
color
:
color_background_dlgbuttons
;
display
:
inline
-
block
;
text
-
align
:
center
;
}
.
prompt
-
edit
{
margin
:
margin_xnormal
;
font
-
size
:
font_normal
;
text
-
align
:
start
;
}
/
*
.
panel
-
row
-
header
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
*
/
.
panel
-
row
-
header
{
background
-
color
:
color_background_panelrow
!
important
;
color
:
color_text_panelrow
;
padding
:
0
!
important
;
}
.
panel
-
row
-
button
{
color
:
color_text_panelrow
;
-
moz
-
appearance
:
none
;
border
:
0
solid
transparent
!
important
;
-
moz
-
user
-
focus
:
ignore
;
-
moz
-
user
-
select
:
none
;
margin
:
0px
;
padding
-
top
:
padding_normal
!
important
;
-
moz
-
box
-
flex
:
1
;
}
.
panel
-
row
-
button
:
hover
:
active
{
background
:
color_background_highlight
;
color
:
color_text_highlight
;
}
/* ... */

