Bug 677673 - Fix position of bookmarks menu on tablets. r=mfinkle
UltraBlame original commit: 9ca2aaaae7bfeffe3d15043f318ec548799c73bb

--- a/mobile/themes/core/honeycomb/platform.css
+++ b/mobile/themes/core/honeycomb/platform.css
@@ -4783,6 +4783,18 @@ none
 ;
 }
 .
+panel
+-
+arrow
+{
+min
+-
+height
+:
+18px
+;
+}
+.
 arrowbox
 -
 dark
